client:Header:debug: Fix bug with userName add style white-space/overflow/text-overflow

--- a/client/src/components/header/HeaderContent/HeaderContent.module.scss
+++ b/client/src/components/header/HeaderContent/HeaderContent.module.scss
@@ -119,7 +119,7 @@
 }
 .headerContent__accountName {
   margin-right: 1rem;
-  width: 6rem;
+  width: 8rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
